--- a/scss/6-components/_breadcrumbs.scss
+++ b/scss/6-components/_breadcrumbs.scss
@@ -3,6 +3,7 @@
 
     padding-top: $cads-spacing-3;
     padding-bottom: $cads-spacing-3;
+    border-bottom: $cads-border-width-small solid $cads-language__border_colour;
 
     ul {
         margin: 0 !important;
